# GoIT

./: Рекомендації по організації папок.txt
Python WEB 1.1/Algorithms/: pyproject.toml
Python WEB 1.1/Algorithms/m16_add_01/: main.py  test.py  youtube_lesson.txt
Python WEB 1.1/Algorithms/Конспекти/: Алгоритми.docx
Python WEB 1.1/Modul_10_Python-WEB/hw/: pyproject.toml
Python WEB 1.1/Modul_10_Python-WEB/hw/hw_project/hw_project/: settings.py  urls.py
Python WEB 1.1/Modul_10_Python-WEB/hw/hw_project/quotes/: urls.py  utils.py  views.py
Python WEB 1.1/Modul_10_Python-WEB/hw/hw_project/quotes/migrations/: 0001_initial.py
Python WEB 1.1/Modul_10_Python-WEB/hw/hw_project/users/: forms.py  urls.py  views.py
Python WEB 1.1/Modul_10_Python-WEB/hw/hw_project/users/templates/: add_author.html  add_quote.html  registration.html
Python WEB 1.1/Modul_10_Python-WEB/Для ментора/hw_MongoDB/: pyproject.toml
Python WEB 1.1/Modul_10_Python-WEB/Для ментора/hw_MongoDB/hw_project/hw_project/: settings.py
Python WEB 1.1/Modul_10_Python-WEB/Для ментора/hw_MongoDB/hw_project/users/: forms.py  (+3 more)
Python WEB 1.1/Modul_10_Python-WEB/Для ментора/hw_SQLight_MongoDB/: pyproject.toml
Python WEB 1.1/Modul_10_Python-WEB/Для ментора/hw_SQLight_MongoDB/hw_project/: manage.py
Python WEB 1.1/Modul_5_Python-WEB/: pyproject.toml  requirements.txt  youtube_lesson  Dunkin.txt  youtube_lesson.txt
Python WEB 1.1/Modul_5_Python-WEB/DZ/: 06_client copy.py  07_client.py  Umova.txt  git.py  main.py  more_one.py  one.py  test.py
Python WEB 1.1/Modul_5_Python-WEB/Dunkin/Web21_09/: ex01_simple_asyncio.py
Python WEB 1.1/Modul_5_Python-WEB/Kuchma/: web16_alg.ipynb
Python WEB 1.1/Modul_5_Python-WEB/Kuchma/m16_05_01/: 03_create_task.py  08_get_http.py
Python WEB 1.1/Modul_5_Python-WEB/Kuchma/m16_05_02/: 04_queue.py
Python WEB 1.1/Modul_5_Python-WEB/Kuchma/m16_05_02/file/: main.py
Python WEB 1.1/Modul_5_Python-WEB/lesson_1/: async_files.py  conspectus_example.py  cpu_bound_tasks.py  hello.txt  parallel_tasks_execution.py  sync_code_example.py
Python WEB 1.1/Modul_5_Python-WEB/lesson_2/: aiopath_aioshutil.py  async_http_client.py  websocket_client.py  websocket_server.py  websockets_chat_client.py  websockets_chat_server.py
Python WEB 1.1/Modul_6_Python-WEB/: pyproject.toml  youtube_lesson  Dunkin.txt  youtube_lesson.txt
Python WEB 1.1/Modul_6_Python-WEB/DZ/: DZ.db  DZ_Mod_6  create-tables.sql  filling_tables.py  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  starter_query.py  test.py  umova.txt
Python WEB 1.1/Modul_6_Python-WEB/Dunkin/Web21_12/: connection.py  insert_data.py  main.py  requirments.txt  select.sql  select_data.py
Python WEB 1.1/Modul_6_Python-WEB/Kuchma/m16_06_01/: .project  create_table.sql  lesson_one.sqlite  select_data.sql
Python WEB 1.1/Modul_6_Python-WEB/Kuchma/m16_06_02/: connect.py  select.py
Python WEB 1.1/Modul_6_Python-WEB/data_base/: insert_data.sql  lesson_one.sqlite
Python WEB 1.1/Modul_6_Python-WEB/postgres/: docker-compose.yml
Python WEB 1.1/Modul_6_Python-WEB/postgres/data/: postmaster.pid
Python WEB 1.1/Modul_6_Python-WEB/postgres/data/global/: 1260  pg_control  pg_internal.init
Python WEB 1.1/Modul_7_Python-WEB/: pyproject.toml  youtube_lesson  Dunkin.txt  youtube_lesson.txt
Python WEB 1.1/Modul_7_Python-WEB/Dunkin/Web21-13/: ex01_simple_usage.py  ex02_select.py  ex03_update.py  ex04_delete.py  vehicle.db
Python WEB 1.1/Modul_7_Python-WEB/Dunkin/Web21_14/: alembic.ini  main.py
Python WEB 1.1/Modul_7_Python-WEB/Dunkin/Web21_14/alembic/: env.py
Python WEB 1.1/Modul_7_Python-WEB/Dunkin/Web21_14/app/: db.py  db_models.py
Python WEB 1.1/Modul_7_Python-WEB/Dunkin/Web21_14/seed/: make_fake_datas.py
Python WEB 1.1/Modul_7_Python-WEB/hw/: alembic.ini  config.ini  hw_7.db  my_select.py  pyproject.toml  seeds.py  test.py  umova.txt
Python WEB 1.1/Modul_7_Python-WEB/hw/conf/: connect_db.py  db.py  models.py
Python WEB 1.1/Modul_7_Python-WEB/hw/migrations/: env.py
Python WEB 1.1/Modul_7_Python-WEB/hw/migrations/versions/: 3de3f8cb6882_init.py  ea0a95b255c7_init.py
Python WEB 1.1/Modul_7_Python-WEB/lesson/lesson_1/: raw_sql_injection.py  sql_alchemy_core.py
Python WEB 1.1/Modul_8_Python-WEB/: pyproject.toml  youtube_lesson  Dunkin.txt  youtube_lesson.txt
Python WEB 1.1/Modul_8_Python-WEB/Dunkin/Web21-15/: app.py  models.py  mongo_main.py
Python WEB 1.1/Modul_8_Python-WEB/Dunkin/Web21-16/: app.py  ex01redis.py  ex01redis_cache.py  ex02rabbit.py  ex03rabbit.py
Python WEB 1.1/Modul_8_Python-WEB/hw/: models.py  search_quotes.py  umova.txt
Python WEB 1.1/Modul_8_Python-WEB/kuchma/m16_08_02/homework/: hw.py
Python WEB 1.1/Modul_9_Python-WEB/: pyproject.toml  youtube_lesson.txt
Python WEB 1.1/Modul_9_Python-WEB/Dunkin/Web21_17/: bs_ex01.py  bs_ex02.py  bs_ex03.py  bs_ex04.py  requests_get_data.py
Python WEB 1.1/Modul_9_Python-WEB/hw/: authors.json  create_cloud_db.py  main.py  umova.txt
(+432 files in other folders)
