[tool.poetry]
name = "modul-5-python-web"
version = "0.1.0"
description = ""
authors = ["TarasSabat <tarsab25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^23.1.0"
requests = "^2.31.0"
black = "^24.2.0"
aiofile = "^3.8.8"
aioshutil = "^1.3"
httpx = "^0.26.0"
websockets = "^12.0"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
