[tool.poetry]
name = "hw_SQLight_MongoDB"
version = "0.1.0"
description = ""
authors = ["TarasSabat <tarsab25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
bson = "^0.5.10"
pymongo = "^4.6.3"
automium-web = "^0.1.1"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
